--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -13,10 +13,6 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v3
 
-    - name: Clone ArknightsGameData repository
-      run: |
-        git clone https://github.com/Kengxxiao/ArknightsGameData ./gamedata_rep
-
     - name: Generate gamedata.json
       run: |
         GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)
@@ -24,7 +20,7 @@ jobs:
 
     - name: Generate baidu.json from Action Secrets
       run: |
-        echo "{\"BAIDU_JSON\": \"${{ secrets.BAIDU_JSON }}\"}" > ./config/baidu.json
+        echo "${{ secrets.BAIDU_JSON }}" > ./config/baidu.json
         
     - name: Output JSON files content (for testing)
       run: |
@@ -33,6 +29,10 @@ jobs:
         echo "Contents of baidu.json:"
         cat ./config/baidu.json
         
+    - name: Clone ArknightsGameData repository
+      run: |
+        git clone https://github.com/Kengxxiao/ArknightsGameData ./gamedata_rep
+
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
