--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -15,6 +15,12 @@ jobs:
 
     - name: Generate gamedata.json
       run: |
+        printf "{hi}"
+        printf "\{hi\}"
+        printf "\{\"hi\":\"1\"}"
+
+    - name: Generate gamedata.json
+      run: |
         GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)
         printf "{\"gamedata\": \"%s/zh_CN/gamedata\"}" "${GAMEDATA_ABS_PATH}" > ./config/gamedata.json
 
