--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -22,12 +22,14 @@ jobs:
     - name: Generate gamedata.json
       run: |
         GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)
-        printf "{\"gamedata\": \"%s/zh_CN/gamedata\"}" "${GAMEDATA_ABS_PATH}" > ./config/gamedata.json
-
-    - name: Generate baidu.json from Action Secrets
+        sed -i "s/\[GameDataPath\]/${GAMEDATA_ABS_PATH}/g" ./config/gamedata.json
+    
+    - name: Replace [BaiduToken] with secret BAIDU_TOKEN
       run: |
-        printf "%s" "${{ secrets.BAIDU_JSON }}" > ./config/baidu.json
-        
+        sed -i 's/\[BaiduToken\]/${{ secrets.BAIDU_TOKEN }}/g' ./config/baidu.json
+      env:
+        BAIDU_TOKEN: ${{ secrets.BAIDU_TOKEN }}
+          
     - name: Output JSON files content (for testing)
       run: |
         echo "Contents of gamedata.json:"
