--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -15,14 +15,8 @@ jobs:
 
     - name: Generate gamedata.json
       run: |
-        printf "{hi}"
-        printf "\{hi\}"
-        printf "\{\"hi\":\"1\"}"
-
-    - name: Generate gamedata.json
-      run: |
         GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)
-        sed -i "s/\[GameDataPath\]/${GAMEDATA_ABS_PATH}/g" ./config/gamedata.json
+        sed -i "s|\[GameDataPath\]|${GAMEDATA_ABS_PATH}|g" ./config/gamedata.json
     
     - name: Replace [BaiduToken] with secret BAIDU_TOKEN
       run: |
