--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Generate gamedata.json
       run: |
-        GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)
+        GAMEDATA_ABS_PATH=$(realpath ./gamedata_rep)/zh_CN/gamedata
         sed -i "s|\[GameDataPath\]|${GAMEDATA_ABS_PATH}|g" ./config/gamedata.json
     
     - name: Replace [BaiduToken] with secret BAIDU_TOKEN
