--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '.github/workflows/Kengxxiao_last_commit.txt'  # 忽略 last_commit.txt 的更改
 
 jobs:
   setup_and_run:
